--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,3 +89,10 @@ body {
   }
   
   /* trivia game */
+
+  .choice {
+    border: 1px solid lightgrey;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
