cleaned up app.js and bolded correct answers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../images/seigaiha.png");
+    background: url("../images/russian-flag.png");
     height: 100%;
   }
   
