--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
-  background: url("../images/russian_pattern.jpg");
-  height: 100%;
+  background-image: url("../images/kremlin-background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: 100% 100%;
 }
   
 /* general */
@@ -15,9 +18,10 @@ body {
   
 .container {
   border-radius: 7px;
-  background-color:rgba(255, 255, 255, 0.9);
+  background-color:rgba(255, 255, 255, 0.8);
   padding: 2%;
   padding: 10px;
+  width: 80%;
   /* box-shadow: 4px 7px rgba(0,115,206, 0.7); */
 }
   
