changed button border color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ width: 80%;
   color: #f8c600;
   font-weight: bold;
   background-color: #c60000;
-  border-color: #c60000;
+  border-color: #f8c600;
   border-radius: 2px;
 }
 
